# cmd/api/main.go
@@ -1,15 +1,21 @@
-// @title JonoPoll
-// @version 0.1.0
-// @description A simple poll and voting API with user authentication
 package main
 
 import (
 	"log"
 	"net/http"
 
+	_ "github.com/phsaurav/echo_prod_blueprint/docs"
 	"github.com/phsaurav/echo_prod_blueprint/internal/server"
 )
 
+// @title			JonoPoll
+// @version		0.1.0
+// @description	A simple poll and voting API with user authentication
+// @securityDefinitions.apikey	BearerAuth
+// @in							header
+// @name						Authorization
+// @description				Enter your JWT token directly (or optionally with 'Bearer ' prefix)
+// @Security					BearerAuth
 func main() {
 
 	app, db, err := server.NewServer()
